// Copyright (c) 2016, Google Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package time_client;

message Block {
  optional bytes prev_block = 1; // Hash of the previous block
  optional int64 index = 2; // Index of the block; not required, but useful to have
  optional int64 difficulty = 3; // "Difficulty" of the puzzle; how long someone slept
  optional bytes creator = 4; // Identity of the person who created this block
  optional bytes data = 5; // Data in the block; could be replaced with transactions in the future.
}
